--- a/index.html
+++ b/index.html
@@ -161,8 +161,15 @@
         <option value="Soft_Instrumental">Instrumental</option>
         <option value="Sea_waves">Waves</option>
         <option value="white_noise">White Noise</option>
+        <option value="fireplace">Fireplace</option>
+        <option value="nature">Nature</option>
       </select>
-      <button id="ambient-toggle" class="ambient-toggle" title="Play/Pause Ambient Sound">▶</button>
+      <button id="ambient-toggle" class="ambient-toggle" title="Play/Pause Ambient Sound"
+        style="margin-left: 5px;">▶</button>
+      <input type="range" id="ambient-volume" title="Volume" min="0" max="1" step="0.05" value="0.5"
+        style="width: 60px; margin-left:10px; accent-color: var(--accent); cursor: pointer;">
+      <button id="effect-toggle" class="ambient-toggle" title="Toggle Visual Effects"
+        style="margin-left:5px;">✨</button>
     </div>
     <div class="sep"></div>
     <div class="setting-item">
